--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-rangeslider": "^2.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
